fixed the overlapping issue with the modal

--- a/src/styles.css
+++ b/src/styles.css
@@ -38,7 +38,6 @@ body {
 #root {
   flex: 1;
   position: relative;
-  z-index: 1;
 }
 
 /* Particles Styling */
@@ -65,7 +64,6 @@ body {
 main {
   position: relative;
   background-color: transparent;
-  z-index: 1;
   margin-top: 50px;
   margin-right: 70px;
   transition: margin-right 0.3s ease;
@@ -79,7 +77,7 @@ nav.nav-open+main {
 
 /* Navbar Styles */
 nav {
-  z-index: 1000;
+  z-index: 100;
   border-radius: 9999px;
   height: 300px;
   width: 60px;
@@ -314,6 +312,8 @@ nav.nav-open + main {
   max-width: 800px;
   margin-left: auto;
   margin-right: auto;
+  position: relative;
+  z-index: 1;
 }
 
 .contact h2 {
@@ -423,7 +423,7 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  z-index: 9999;
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.3s ease, visibility 0.3s ease;
